--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Балда на двоих</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<style>
 /* 			* { margin: 0; margin-top: 10px;} */
