--- a/sol.html
+++ b/sol.html
@@ -35,7 +35,7 @@
 			
 			for (var i = 0; i < count; i++) {
 			
-				var angle = 2*Math.PI/count * i + radius * 0.02
+				var angle = 2*Math.PI/count * i// + radius * 0.02
 
 				var newX = width/2 + Math.cos(angle) * radius
 				var newY = height/2 + Math.sin(angle) * radius
