--- a/sol.html
+++ b/sol.html
@@ -69,8 +69,7 @@
 			
 			radius += del
 			
-			if (isFinished) del *= -1 //clearInterval(timerId)
-			if (radius < (width < height ? width : height) * 0.15) del *= -1
+			if (isFinished) clearInterval(timerId)
 		}
 		
 	</script>
