--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<html>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<style>
+/* 			* { margin: 0; margin-top: 10px;} */
+		</style>
+	</head>
+<body>
+	<center>
+	<canvas id="left"></canvas>
+	<canvas id="c"></canvas>
+	<canvas id="right"></canvas>
+	</center>
+	<center>
+	<input type="button" onclick="wrongWord()" value="Неправильно"/>
+	<input type="button" onclick="rightWord()" value="Засчитать слово"/>
+	<input type="button" onclick="returnBack()" value="Отменить"/>
+	</center>
+	<script>
+
 var nodes = d3.selectAll("circle.node");
 
 var squares = [];
@@ -108,3 +128,7 @@ var areaCalculator = {
           this.figureArea = this.frame.area*p_positive/p;
       }
 };
+
+</script>
+</body>
+</html>
