--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<style>
 /* 			* { margin: 0; margin-top: 10px;} */
 		</style>
