--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
 		</style>
 	</head>
 <body>
-	<center>
-	<canvas id="left"></canvas>
-	<canvas id="c"></canvas>
-	<canvas id="right"></canvas>
-	</center>
-	<center>
-	<input type="button" onclick="wrongWord()" value="Неправильно"/>
-	<input type="button" onclick="rightWord()" value="Засчитать слово"/>
-	<input type="button" onclick="returnBack()" value="Отменить"/>
-	</center>
 	<script>
+		console.log("lol")
+	</script>
+</body>
+</html>
