--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<style>
-/* 			* { margin: 0; margin-top: 10px;} */
-		</style>
 	</head>
 <body>
-	<script>
-		console.log("lol")
+	<script>function k(n) {
+			var sum = 0
+			for (var i = 1; i <= n.length; i++) {
+				sum += n[i]
+			}
+			var result = []
+			for (var i = 1; i <= n.length; i++) {
+				result[i] = n[i] / sum
+			}
+			return result
+		}
+		console.log(k([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]))
+		
+		
 	</script>
 </body>
 </html>
