--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 			var sum = 0
 			for (var i = 1; i <= n.length; i++) {
 				sum += n[i]
+				console.log(sum)
 			}
 			var result = []
 			for (var i = 1; i <= n.length; i++) {
 				result[i] = n[i] / sum
+				console.log(n[i] / sum)
 			}
 			return result
 		}
