--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			var result = []
 			for (var i = 1; i <= n.length; i++) {
 				result[i] = n[i] / sum
-				console.log(n[i] / sum)
+				console.log(n[i], sum)
 			}
 			return result
 		}
