--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 	<script>function k(n) {
 			var sum = 0
-			for (var i = 1; i <= n.length; i++) {
+			for (var i = 0; i < n.length; i++) {
 				sum += n[i]
 				console.log(sum)
 			}
