--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				console.log(sum)
 			}
 			var result = []
-			for (var i = 1; i <= n.length; i++) {
+			for (var i = 0; i < n.length; i++) {
 				result[i] = n[i] / sum
 				console.log(n[i], sum)
 			}
