--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 			var sum = 0
 			for (var i = 0; i < n.length; i++) {
 				sum += n[i]
-				console.log(sum)
 			}
 			var result = []
 			for (var i = 0; i < n.length; i++) {
 				result[i] = n[i] / sum
-				console.log(n[i], sum)
 			}
 			return result
 		}
-		console.log(k([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]))
+		//console.log(k([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]))
 		
+		function T(lambda, myu) {
+			return 1/myu / (1 - lambda/myu)
+		}
+		console.log(T(5, 2))
 		
 	</script>
 </body>
