--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			var p = 0.02
 			var error = 0.001
 			for (var v = 1; v < 1000; v++) {
-				var r = ererlangl(v, y)
+				var r = erlang(v, y)
 				if (Math.abs(p - r) < minV)
 					minV = v
 				if (Math.abs(p - r) <= error)
