--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			return p
 		}
 		function streemNumber(y) {
-			var minV = Number.maxValue
+			var minV = Number.MAX_VALUE
 			var p = 0.02
 			var error = 0.001
 			for (var v = 1; v < 1000; v++) {
