--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 			var error = 0.001
 			for (v = 1; v < 1000; v++) {
 				var r = erlang(v, y)
-				if (Math.abs(p - r) < minErr)
+				if (p > r && Math.abs(p - r) < minErr)
 					minErr = Math.abs(p - r)
 					minV = v
-				if (Math.abs(p - r) <= error)
+				if (p > r && Math.abs(p - r) <= error)
 					break
 			}
 			return v < minV ? v : minV
