--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 			var minV = 0
 			var p = 0.02
 			var error = 0.001
-			for (v = 1; v < 100000; v++) {
+			var max = y > 800 ? y * 2 : 1000
+			for (v = 1; v < max; v++) {
 				var r = erlang(v, y)
 				if (p > r && Math.abs(p - r) < minErr)
 					minErr = Math.abs(p - r)
