--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 			
 		}
 		
+		var y1 = function(just) {
+			return 0
+		}
+		
 		var v = function(Y) {
 			return streemNumber(Y)
 		}
@@ -82,10 +86,34 @@
 			return N * a0
     		}
 		var b = function(a) {
-			var L = 200
-			var T = 50
+			var L = 200 * 8   //байт -> бит
+			var T = 50 / 1000 // мс  -> с
 			return a + L/T
 		}
+		
+		var C = [
+[9999, 9999, 9999, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999],
+[9999, 0, 9999, 9999, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999],
+[9999, 9999, 0, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999],
+[9999, 9999, 9999, 0, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999],
+[9999, 9999, 9999, 9999, 0, 9999, 9999, 9999, 9999, 9999, 1, 9999],
+[9999, 9999, 9999, 9999, 9999, 0, 9999, 9999, 9999, 9999, 9999, 1],
+[9999, 9999, 9999, 9999, 9999, 9999, 0, 9999, 9999, 9999, 1, 9999],
+[9999, 9999, 9999, 9999, 9999, 9999, 9999, 0, 9999, 9999, 9999, 1],
+[1, 9999, 1, 9999, 9999, 9999, 9999, 9999, 0, 1, 1, 1],
+[9999, 1, 9999, 1, 9999, 9999, 9999, 9999, 1, 0, 1, 1],
+[9999, 9999, 9999, 9999, 1, 9999, 1, 9999, 1, 1, 0, 1],
+[9999, 9999, 9999, 9999, 9999, 1, 9999, 1, 1, 1, 1, 0]
+]
+		
+		var Y = arrAgregator(C, nil, y1)
+		var V = arrAgregator(C, Y, v)
+		var A = arrAgregator(C, V, a)
+		var B = arrAgregator(C, A, b)
+		console.log(Y)
+		console.log(V)
+		console.log(A)
+		console.log(B)
 		
 		function V(C, Y) {
 			return arrAgregator(C, Y, v)
