--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		
 		function arrAgregator(C, arr, f) {
 			var result
-			for (var i = 0; i < C.length: i++)
-			for (var j = 0; j < C[i].length: j++) {
+			for (var i = 0; i < C.length; i++)
+			for (var j = 0; j < C[i].length; j++) {
 				if C[i][j] == 1
 					result[i][j] = f(arr[i][j])
 				else
