--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 [9999, 9999, 9999, 9999, 9999, 1, 9999, 1, 1, 1, 1, 1]
 ]
 		
-		var Y = arrAgregator(C, nil, y1)
+		var Y = arrAgregator(C, null, y1)
 		var V = arrAgregator(C, Y, v)
 		var A = arrAgregator(C, V, a)
 		var B = arrAgregator(C, A, b)
