--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		console.log(streemNumber(1600))
 		
 		function arrAgregator(C, arr, f) {
-			var result
+			var result = [[]];
 			for (var i = 0; i < C.length; i++)
 			for (var j = 0; j < C[i].length; j++) {
 				if (C[i][j] == 1)
