--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
 [9999, 9999, 9999, 9999, 9999, 1, 9999, 1, 1, 1, 1, 1]
 ]
 		
+		var Floid = [
+			[1, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9], 
+[10, 2, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10], 
+[9, 9, 3, 9, 9, 9, 9, 9, 9, 9, 9, 9], 
+[10, 10, 10, 4, 10, 10, 10, 10, 10, 10, 10, 10], 
+[11, 11, 11, 11, 5, 11, 11, 11, 11, 11, 11, 11], 
+[12, 12, 12, 12, 12, 6, 12, 12, 12, 12, 12, 12], 
+[11, 11, 11, 11, 11, 11, 7, 11, 11, 11, 11, 11], 
+[12, 12, 12, 12, 12, 12, 12, 8, 12, 12, 12, 12], 
+[1, 10, 3, 10, 11, 12, 11, 12, 9, 10, 11, 12], 
+[9, 2, 9, 4, 11, 12, 11, 12, 9, 10, 11, 12], 
+[9, 10, 9, 10, 5, 12, 7, 12, 9, 10, 11, 12], 
+[9, 10, 9, 10, 11, 6, 11, 8, 9, 10, 11, 12]
+]
+		
 		var Y = arrAgregator(C, null, y1)
 		var V = arrAgregator(C, Y, v)
 		var A = arrAgregator(C, V, a)
