--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		
 		function findNodesForEdges() {
 			var res = [[[]]]
-			for (var i = 0; i < Floid.length; i++)
+			for (var i = 0; i < 8; i++)
 			for (var j = 0; i < Floid[i].length; i++) {
 				var f = function(a, b) {
 					if (a != b)
