--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			}
 			return res
 		}
-		findSummForEdjes([[]], findNodesForEdges())
+		findSummForEdjes([], findNodesForEdges())
 		
 		var Y = arrAgregator(C, null, y1)
 		var V = arrAgregator(C, Y, v)
