--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			}
 			return res
 		}
-		findSummForEdjes([], findNodesForEdges())
+		findSummForEdjes([123, 513, 433, 222, 441, 431,413, 422], findNodesForEdges())
 		
 		var Y = arrAgregator(C, null, y1)
 		var V = arrAgregator(C, Y, v)
