--- a/index.html
+++ b/index.html
@@ -1,187 +1,9 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<title="lab1">
 	</head>
 <body>
-	<script>
-		
-		function k(n) {
-			var sum = 0
-			for (var i = 0; i < n.length; i++) {
-				sum += n[i]
-			}
-			var result = []
-			for (var i = 0; i < n.length; i++) {
-				result[i] = n[i] / sum
-			}
-			return result
-		}
-		console.log(k([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]))
-		
-		function T(lambda, myu) {
-			return 1/myu / (1 - lambda/myu)
-		}
-		console.log(T(5, 2))
-		
-		function fack(n) {
-			if (n == 1 || n == 0)
-				return 1
-			if (n < 0)
-				return null
-			return n * fac(n - 1)
-		}
-		
-		function erlang(v, y) {
-			var p = 0
-			for (var i = 1; i <= v; i++) {
-				if (i == 1)
-					p = y / (1 + y)
-				else
-					p = y * p / (i + y * p)
-			}
-			return p
-		}
-		function streemNumber(y) {
-			var v = 0
-			var minErr = Number.MAX_VALUE
-			var minV = 0
-			var p = 0.02
-			var error = 0.001
-			var max = y > 800 ? y * 2 : 1000
-			for (v = 1; v < max; v++) {
-				var r = erlang(v, y)
-				if (p > r && Math.abs(p - r) < minErr)
-					minErr = Math.abs(p - r)
-					minV = v
-				if (p > r && Math.abs(p - r) <= error)
-					break
-			}
-			return v < minV ? v : minV
-		}
-		console.log(streemNumber(1600))
-		
-		function arrAgregator(C, arr, f) {
-			var result = [[]];
-			for (var i = 0; i < C.length; i++)
-			for (var j = 0; j < C[i].length; j++) {
-				if (C[i][j] == 1)
-					result[i][j] = f(arr[i][j])
-				else
-					result[i][j] = 0
-			}
-			return result
-			
-		}
-		
-		var y1 = function(just) {
-			return 0
-		}
-		
-		var v = function(Y) {
-			return streemNumber(Y)
-		}
-		
-		var a = function(N) {
-			var a0 = 85.6
-			return N * a0
-    		}
-		var b = function(a) {
-			var L = 200 * 8   //байт -> бит
-			var T = 50 / 1000 // мс  -> с
-			return a + L/T
-		}
-		
-		var C = [
-[1, 9999, 9999, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999],
-[9999, 1, 9999, 9999, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999],
-[9999, 9999, 1, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999],
-[9999, 9999, 9999, 1, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999],
-[9999, 9999, 9999, 9999, 1, 9999, 9999, 9999, 9999, 9999, 1, 9999],
-[9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999, 9999, 9999, 1],
-[9999, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999, 1, 9999],
-[9999, 9999, 9999, 9999, 9999, 9999, 9999, 1, 9999, 9999, 9999, 1],
-[1, 9999, 1, 9999, 9999, 9999, 9999, 9999, 1, 1, 1, 1],
-[9999, 1, 9999, 1, 9999, 9999, 9999, 9999, 1, 1, 1, 1],
-[9999, 9999, 9999, 9999, 1, 9999, 1, 9999, 1, 1, 1, 1],
-[9999, 9999, 9999, 9999, 9999, 1, 9999, 1, 1, 1, 1, 1]
-]
-		
-		var Floid = [
-			[1, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9], 
-[10, 2, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10], 
-[9, 9, 3, 9, 9, 9, 9, 9, 9, 9, 9, 9], 
-[10, 10, 10, 4, 10, 10, 10, 10, 10, 10, 10, 10], 
-[11, 11, 11, 11, 5, 11, 11, 11, 11, 11, 11, 11], 
-[12, 12, 12, 12, 12, 6, 12, 12, 12, 12, 12, 12], 
-[11, 11, 11, 11, 11, 11, 7, 11, 11, 11, 11, 11], 
-[12, 12, 12, 12, 12, 12, 12, 8, 12, 12, 12, 12], 
-[1, 10, 3, 10, 11, 12, 11, 12, 9, 10, 11, 12], 
-[9, 2, 9, 4, 11, 12, 11, 12, 9, 10, 11, 12], 
-[9, 10, 9, 10, 5, 12, 7, 12, 9, 10, 11, 12], 
-[9, 10, 9, 10, 11, 6, 11, 8, 9, 10, 11, 12]
-]
-		
-		function findNodesForEdges() {
-			var res = [[[]]]
-			for (var i = 0; i < 8; i++)
-			for (var j = 0; i < Floid[i].length; i++) {
-				var f = function(a, b) {
-					if (a != b)
-						res[a][Floid[a][b]].push(i)
-					f(Floid[a][b], b)
-				}
-				f(i, j)
-			}
-			return res
-		}
-		function findSummForEdjes(n, arr) {
-			var res = [[]]
-			for (var i = 0; i < Floid.length; i++)
-			for (var j = 0; i < Floid[i].length; i++) {
-				var sum = 0
-				var p = []
-				for (var k = 0; k < arr.length; k++) {
-					var nod = arr[i][j][k]
-					if (!p.includes(nod)) {
-						p.push(nod)
-						sum += n[nod]
-					}
-				}
-				res[i][j] = sum
-			}
-			return res
-		}
-		findSummForEdjes([123, 513, 433, 222, 441, 431,413, 422], findNodesForEdges())
-		
-		var Y = arrAgregator(C, null, y1)
-		var V = arrAgregator(C, Y, v)
-		var A = arrAgregator(C, V, a)
-		var B = arrAgregator(C, A, b)
-		console.log(Y)
-		console.log(V)
-		console.log(A)
-		console.log(B)
-		
-		function V(C, Y) {
-			return arrAgregator(C, Y, v)
-		}
-		
-		//a[i][j] = N[i][j] * a0, C[i][j] == 1
-		//a[i][j] = 0, 		  C[i][j] != 1
-		//C - алгоритм флойда
-		function A(C, V) {
-			return arrAgregator(C, V, a)
-		}
-		
-		//b[i][j] = N[i][j] * a0, C[i][j] == 1
-		//b[i][j] = 0, 		  C[i][j] != 1
-		//C - алгоритм флойда
-		function B(C, A) {
-			return arrAgregator(C, A, b)
-		}
-		
-
-		
-	</script>
+	
 </body>
 </html>
