--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title="lab1">
+		<title>"lab1"</title>
 	</head>
 <body>
 	
